--- a/index.html
+++ b/index.html
@@ -1,52 +1,97 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Flower Shop</title>
-    <!-- Fonts -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,700&display=swap" rel="stylesheet">
-    <!--  -->
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
-    <!-- Header -->
+<!-- Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,700&display=swap"
+      rel="stylesheet"
+    />
+<!--  -->
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+<!-- Header -->
     <header class="header-bg">
-        <div class="banner">
-            <div class="banner-content">
-                <h1>Let's make<br> 
-                    beautiful flowers a<br>
-                     part of your life.</h1>
-                <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters.</p>
-                <button class="btn">Shop Now</button>
-            </div>
-            <div class="banner-img">
-               
-                <img src="/flower-asset/pngwing 10.png" alt="">
-            </div>
-
+      <div class="banner">
+        <div class="banner-content">
+          <h1>
+            Let's make<br />
+            beautiful flowers a<br />
+            part of your life.
+          </h1>
+          <p>
+            It is a long established fact that a reader will be distracted by
+            the readable content of a page when looking at its layout. The point
+            of using Lorem Ipsum is that it has a more-or-less normal
+            distribution of letters.
+          </p>
+          <button class="btn">Shop Now</button>
         </div>
+        <div class="banner-img">
+          <img src="/flower-asset/pngwing 10.png" alt="" />
+        </div>
+      </div>
     </header>
-    <!-- Main Section -->
+<!-- Main Section -->
     <main>
-        <!-- Featured -->
-        <div class="featured">
-            <h4>Our Featured Flowers</h4>
-            <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
-        </div>
-        <!-- Product -->
-        <div class="container">
-            <div class="product">
-                <div class="flower-tree"></div>
-                <div class="flower-tree"></div>
-                <div class="flower-tree"></div>
+<!-- Featured -->
+      <div class="featured">
+        <h4>Our Featured Flowers</h4>
+        <p>
+          It is a long established fact that a reader will be distracted by the
+          readable content of a page when looking at its layout.
+        </p>
+      </div>
+<!-- Product -->
+      <div class="container">
+        <div class="product">
+          <!-- First Image -->
+          <div class="flower-tree">
+            <div class="flower-img">
+              <img src="flower-asset/pngwing 6.png" class="first" />
             </div>
-            <div class="service"></div>
+            <a href="#!">Pink Flower Tree</a>
+          </div>
+          <!-- Second Image -->
+          <div class="flower-tree">
+            <div class="flower-img">
+              <img src="flower-asset/pngwing 5.png" class="second" />
+            </div>
+            <a href="#!">Bouquet Flowers</a>
+          </div>
+          <!-- Third Image -->
+          <div class="flower-tree">
+            <div class="flower-img">
+              <img src="flower-asset/pngwing 7.png" class="third" />
+            </div>
+            <a href="#!">Yellow Flower Tree</a>
+          </div>
         </div>
-
+<!-- Service Section -->
+        <div class="service">
+<!-- Delivery -->
+            <div class="delivery">
+                <img src="flower-asset/Group 57.png" alt="">
+                <p>Same Day Delivery. Click & Collect.</p>
+            </div>
+<!-- Fresh Flowers -->
+            <div class="fresh-flowers">
+                <img src="flower-asset/Group 58.png" alt="">
+                <p>Fresh Flowers. Local Growers.</p>
+            </div>
+<!-- Support -->
+            <div class="support">
+                <img src="flower-asset/Group 59.png" alt="">
+                <p>24/7 Free Support.</p>
+            </div>
+        </div>
+      </div>
     </main>
-    <footer></footer>   
-</body>
+    <footer></footer>
+  </body>
 </html>
