--- a/index.html
+++ b/index.html
@@ -4,19 +4,20 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Flower Shop</title>
-<!-- Fonts -->
+    <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,700&display=swap"
       rel="stylesheet"
     />
-<!--  -->
+    <!--  -->
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-<!-- Header -->
+    <!-- Header -->
     <header class="header-bg">
+      <!-- Banner -->
       <div class="banner">
         <div class="banner-content">
           <h1>
@@ -33,13 +34,13 @@
           <button class="btn">Shop Now</button>
         </div>
         <div class="banner-img">
-          <img src="/flower-asset/pngwing 10.png" alt="" />
+          <img src="flower-asset/pngwing 10.png" alt="" />
         </div>
       </div>
     </header>
-<!-- Main Section -->
+    <!-- Main Section -->
     <main>
-<!-- Featured -->
+      <!-- Featured -->
       <div class="featured">
         <h4>Our Featured Flowers</h4>
         <p>
@@ -47,7 +48,7 @@
           readable content of a page when looking at its layout.
         </p>
       </div>
-<!-- Product -->
+      <!-- Product -->
       <div class="container">
         <div class="product">
           <!-- First Image -->
@@ -72,26 +73,58 @@
             <a href="#!">Yellow Flower Tree</a>
           </div>
         </div>
-<!-- Service Section -->
+        <!-- Service Section -->
         <div class="service">
-<!-- Delivery -->
-            <div class="delivery">
-                <img src="flower-asset/Group 57.png" alt="">
-                <p>Same Day Delivery. Click & Collect.</p>
-            </div>
-<!-- Fresh Flowers -->
-            <div class="fresh-flowers">
-                <img src="flower-asset/Group 58.png" alt="">
-                <p>Fresh Flowers. Local Growers.</p>
-            </div>
-<!-- Support -->
-            <div class="support">
-                <img src="flower-asset/Group 59.png" alt="">
-                <p>24/7 Free Support.</p>
-            </div>
+          <!-- Delivery -->
+          <div class="delivery">
+            <img src="flower-asset/Group 57.png" alt="" />
+            <p>Same Day Delivery. Click & Collect.</p>
+          </div>
+          <!-- Fresh Flowers -->
+          <div class="fresh-flowers">
+            <img src="flower-asset/Group 58.png" alt="" />
+            <p>Fresh Flowers. Local Growers.</p>
+          </div>
+          <!-- Support -->
+          <div class="support">
+            <img src="flower-asset/Group 59.png" alt="" />
+            <p>24/7 Free Support.</p>
+          </div>
         </div>
       </div>
+      <!-- Product End -->
+      <!-- Hot Deal -->
+      <div class="hot-deal">
+        <div class="deal-contant">
+            <h2>Hot Deal ! Sale Up To 25% Off</h2>
+            <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
+        
+            <button class="btn">Sign Up</button>
+        
+        </div>
+        <div class="deal-img">
+            <img src="flower-asset/pngwing 8.png" alt="">
+        </div>
+
+      </div>
+      <!-- Hot Deal End -->
+
+      <!-- Instagram -->
+      <div class="container">
+        <div class="insta">
+            <h2>Instagram</h2>
+            <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
+        </div>
+        <div class="insta-item">
+            <img src="flower-asset/Flower 01.png" alt="">
+            <img src="flower-asset/Rectangle 4.png" alt="">
+            <img src="flower-asset/Rectangle 5.png" alt="">
+            <img src="flower-asset/Rectangle 6.png" alt="">
+        </div>
+      </div>
+      <!-- Instagram End -->
     </main>
+    <!-- Main End -->
     <footer></footer>
   </body>
 </html>
