latest deal don

--- a/index.html
+++ b/index.html
@@ -123,6 +123,17 @@
         </div>
       </div>
       <!-- Instagram End -->
+
+      <!-- Latest Deal -->
+      <div class="container latest-deal">
+        <h2>Get The Latest Deals</h2>
+        <p>$30 coupon for first shopping</p>
+        <div class="ld">
+        <input type="email" placeholder="Enter Your Email">
+        <button class="btn">Subscribe</button>
+    </div>
+      </div>
+      <!-- Latest Deal End -->
     </main>
     <!-- Main End -->
     <footer></footer>
