--- a/index.html
+++ b/index.html
@@ -96,30 +96,34 @@
       <!-- Hot Deal -->
       <div class="hot-deal">
         <div class="deal-contant">
-            <h2>Hot Deal ! Sale Up To 25% Off</h2>
-            <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
-        
-            <button class="btn">Sign Up</button>
-        
+          <h2>Hot Deal ! Sale Up To 25% Off</h2>
+          <p>
+            It is a long established fact that a reader will be distracted by
+            the readable content of a page when looking at its layout.
+          </p>
+
+          <button class="btn">Sign Up</button>
         </div>
         <div class="deal-img">
-            <img src="flower-asset/pngwing 8.png" alt="">
+          <img src="flower-asset/pngwing 8.png" alt="" />
         </div>
-
       </div>
       <!-- Hot Deal End -->
 
       <!-- Instagram -->
       <div class="container">
         <div class="insta">
-            <h2>Instagram</h2>
-            <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
+          <h2>Instagram</h2>
+          <p>
+            It is a long established fact that a reader will be distracted by
+            the readable content of a page when looking at its layout.
+          </p>
         </div>
         <div class="insta-item">
-            <img src="flower-asset/Flower 01.png" alt="">
-            <img src="flower-asset/Rectangle 4.png" alt="">
-            <img src="flower-asset/Rectangle 5.png" alt="">
-            <img src="flower-asset/Rectangle 6.png" alt="">
+          <img src="flower-asset/Flower 01.png" alt="" />
+          <img src="flower-asset/Rectangle 4.png" alt="" />
+          <img src="flower-asset/Rectangle 5.png" alt="" />
+          <img src="flower-asset/Rectangle 6.png" alt="" />
         </div>
       </div>
       <!-- Instagram End -->
@@ -129,13 +133,19 @@
         <h2>Get The Latest Deals</h2>
         <p>$30 coupon for first shopping</p>
         <div class="ld">
-        <input type="email" placeholder="Enter Your Email">
-        <button class="btn">Subscribe</button>
-    </div>
+          <input type="email" placeholder="Enter Your Email" />
+          <button class="btn">Subscribe</button>
+        </div>
       </div>
       <!-- Latest Deal End -->
     </main>
     <!-- Main End -->
-    <footer></footer>
+    <footer>
+      <div class="flower-shop">
+        <h2><span class="clr">Flower</span>Shop</h2>
+        <p class="last-part">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
+        <p>@2020-2023, FlowerShop.com. All rights reserved.</p>
+      </div>
+    </footer>
   </body>
 </html>
