--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             beautiful flowers a<br />
             part of your life.
           </h1>
-          <p>
+          <p class="primary-p">
             It is a long established fact that a reader will be distracted by
             the readable content of a page when looking at its layout. The point
             of using Lorem Ipsum is that it has a more-or-less normal
@@ -43,7 +43,7 @@
       <!-- Featured -->
       <div class="featured">
         <h4>Our Featured Flowers</h4>
-        <p>
+        <p class="primary-p">
           It is a long established fact that a reader will be distracted by the
           readable content of a page when looking at its layout.
         </p>
@@ -78,7 +78,7 @@
           <!-- Delivery -->
           <div class="delivery">
             <img src="flower-asset/Group 57.png" alt="" />
-            <p>Same Day Delivery. Click & Collect.</p>
+            <p >Same Day Delivery. Click & Collect.</p>
           </div>
           <!-- Fresh Flowers -->
           <div class="fresh-flowers">
@@ -97,7 +97,7 @@
       <div class="hot-deal">
         <div class="deal-contant">
           <h2>Hot Deal ! Sale Up To 25% Off</h2>
-          <p>
+          <p class="primary-p">
             It is a long established fact that a reader will be distracted by
             the readable content of a page when looking at its layout.
           </p>
@@ -114,7 +114,7 @@
       <div class="container">
         <div class="insta">
           <h2>Instagram</h2>
-          <p>
+          <p class="primary-p">
             It is a long established fact that a reader will be distracted by
             the readable content of a page when looking at its layout.
           </p>
@@ -131,7 +131,7 @@
       <!-- Latest Deal -->
       <div class="container latest-deal">
         <h2>Get The Latest Deals</h2>
-        <p>$30 coupon for first shopping</p>
+        <p class="primary-p">$30 coupon for first shopping</p>
         <div class="ld">
           <input type="email" placeholder="Enter Your Email" />
           <button class="btn">Subscribe</button>
