--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
       <div class="flower-shop">
         <h2><span class="clr">Flower</span>Shop</h2>
         <p class="last-part">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
-        <p>@2020-2023, FlowerShop.com. All rights reserved.</p>
+        <p class="copyright">@2020-2023, FlowerShop.com. All rights reserved.</p>
       </div>
     </footer>
   </body>
