Trending section add done

--- a/index.html
+++ b/index.html
@@ -53,32 +53,63 @@
         <div class="product">
           <!-- First Image -->
           <div class="flower-tree">
-            <div class="flower-img">
+            <div class="flower-img1">
               <img src="flower-asset/pngwing 6.png" class="first" />
             </div>
             <a href="#!">Pink Flower Tree</a>
           </div>
           <!-- Second Image -->
           <div class="flower-tree">
-            <div class="flower-img">
+            <div class="flower-img1">
               <img src="flower-asset/pngwing 5.png" class="second" />
             </div>
             <a href="#!">Bouquet Flowers</a>
           </div>
           <!-- Third Image -->
           <div class="flower-tree">
-            <div class="flower-img">
+            <div class="flower-img1">
               <img src="flower-asset/pngwing 7.png" class="third" />
             </div>
             <a href="#!">Yellow Flower Tree</a>
           </div>
         </div>
+        <!-- Product End -->
+        <!-- Trending Product -->
+
+        <div class="featured">
+          <h4>Trending Flowers</h4>
+          <p class="primary-p">People love them most</p>
+        </div>
+        <div class="product">
+          <!-- First Image -->
+          <div class="flower-tree">
+            <div class="flower-img2">
+              <img src="flower-asset/pngwing 5.png" class="first" />
+            </div>
+            <a href="#!">Preserved Flowers</a>
+          </div>
+          <!-- Second Image -->
+          <div class="flower-tree">
+            <div class="flower-img2">
+              <img src="flower-asset/img1.png" class="second" />
+            </div>
+            <a href="#!">Arificial Flowers</a>
+          </div>
+          <!-- Third Image -->
+          <div class="flower-tree">
+            <div class="flower-img2">
+              <img src="flower-asset/pngwing 8.png" class="third" />
+            </div>
+            <a href="#!">Jar of Rose</a>
+          </div>
+        </div>
+        <!-- Trending End -->
         <!-- Service Section -->
         <div class="service">
           <!-- Delivery -->
           <div class="delivery">
             <img src="flower-asset/Group 57.png" alt="" />
-            <p >Same Day Delivery. Click & Collect.</p>
+            <p>Same Day Delivery. Click & Collect.</p>
           </div>
           <!-- Fresh Flowers -->
           <div class="fresh-flowers">
@@ -143,8 +174,13 @@
     <footer>
       <div class="flower-shop">
         <h2><span class="clr">Flower</span>Shop</h2>
-        <p class="last-part">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
-        <p class="copyright">@2020-2023, FlowerShop.com. All rights reserved.</p>
+        <p class="last-part">
+          It is a long established fact that a reader will be distracted by the
+          readable content of a page when looking at its layout.
+        </p>
+        <p class="copyright">
+          @2020-2023, FlowerShop.com. All rights reserved.
+        </p>
       </div>
     </footer>
   </body>
