--- a/index.html
+++ b/index.html
@@ -169,6 +169,29 @@
         </div>
       </div>
       <!-- Latest Deal End -->
+      <!-- User Review -->
+      <div class="container">
+        <h2 class="ur">User Review</h2>
+        <div class="user-review">
+        <div class="user border">
+          <img src="flower-asset/pngwing 10.png" alt="">
+          <h3>Best Gifts Ever</h3>
+          <p class="primary-p">"I bought this for my cousing she said they were amazing!"</p>
+
+        </div>
+        <div class="user border">
+          <img src="flower-asset/pngwing 5.png" alt="">
+          <h3>Sweet Anniversary</h3>
+          <p class="primary-p">"She was so happy. Best Anniversary ever!"</p>
+        </div>
+        <div class="user">
+          <img src="flower-asset/pngwing 8.png" alt="">
+          <h3>Happy Mother's Day</h3>
+          <p class="primary-p">"Her face lit up with a radiant smile as she held the bouquet of flowers in her hands"</p>
+        </div>
+      </div>
+      </div>
+      <!-- User Review End -->
     </main>
     <!-- Main End -->
     <footer>
