Assignment1 Done with bonus part

--- a/index.html
+++ b/index.html
@@ -177,17 +177,19 @@
           <img src="flower-asset/pngwing 10.png" alt="">
           <h3>Best Gifts Ever</h3>
           <p class="primary-p">"I bought this for my cousing she said they were amazing!"</p>
-
+          <p class="person">- Rahim</p>
         </div>
         <div class="user border">
           <img src="flower-asset/pngwing 5.png" alt="">
           <h3>Sweet Anniversary</h3>
           <p class="primary-p">"She was so happy. Best Anniversary ever!"</p>
+          <p class="person">- Karim</p>
         </div>
         <div class="user">
           <img src="flower-asset/pngwing 8.png" alt="">
           <h3>Happy Mother's Day</h3>
           <p class="primary-p">"Her face lit up with a radiant smile as she held the bouquet of flowers in her hands"</p>
+          <p class="person">- Rasel</p>
         </div>
       </div>
       </div>
